# Resonance

./: DEVELOPMENT.md  README.md  package-lock.json  package.json
.github/workflows/: ci.yml  release.yml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/audio/: buffer.rs  engine.rs  mod.rs  sample.rs  waveform.rs
src-tauri/src/format/: io.rs  midi_io.rs  mod.rs  project_validator.rs  ust.rs  ustx.rs  wav.rs
src-tauri/src/midi/: event.rs  mod.rs  note.rs  note_track.rs.bak  track.rs
src-tauri/src/plugin/: mod.rs  phonemizer.rs  resampler.rs
src/components/: AudioPlayer.tsx  ChordLibrary.tsx  DrumPatterns.tsx  EffectRack.tsx  LyricEditor.tsx  MasterVolume.tsx  Metronome.tsx  Mixer.tsx  PianoRoll.tsx  PianorollTool.tsx  PlaybackRate.tsx  Presets.tsx  QuantizeStrength.tsx  SnapOptions.tsx  TapTempo.tsx  TimeSignature.tsx  TimeStretch.tsx  Timeline.tsx  Toolbar.tsx  TrackColor.tsx  TrackControls.tsx  TrackList.tsx  TransportBar.tsx  VelocityCurve.tsx  VocalMode.tsx  index.ts
src/hooks/: useKeyboardShortcuts.ts
src/store/: projectStore.ts
src/types/: index.ts
